{
    "name": "PlayerInteraction",
    "maps": [
        {
            "name": "Player",
            "id": "64f6c217-2b70-43ac-a5a2-9b359662b982",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "252facbf-46f0-47e6-9502-89eca6c50dbf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowBox",
                    "type": "Button",
                    "id": "df90e237-952d-4987-8dd4-c9d8511bff2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropBox",
                    "type": "Button",
                    "id": "dc022272-b9eb-429c-b972-690716428b45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitUI",
                    "type": "Button",
                    "id": "cddeec8d-0e11-4ac4-ba06-285a809eb08f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DayEnd",
                    "type": "Button",
                    "id": "8b9f8ac1-6ca6-48ed-a264-011e69610037",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae97193c-7252-4f4e-a79b-13939880e5d8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "593a80c1-64a4-401a-9ed6-e14e64b50ca8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "119d4ea7-3dab-4383-949d-71f65f014369",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a7f4f3b-e162-4b6a-a780-787b6a001578",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f691bb2-3462-402b-9c41-0480fd952bd9",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DayEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}